target/classes/META-INF/fabric8/openshift/fabric8-maven-sample-zero-config-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/fabric8-maven-sample-zero-config
    fabric8.io/scm-tag: HEAD
  labels:
    app: fabric8-maven-sample-zero-config
    provider: fabric8
    version: 4.3.1
    group: io.fabric8
  name: fabric8-maven-sample-zero-config
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fabric8-maven-sample-zero-config
    provider: fabric8
    group: io.fabric8
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/scm-tag: HEAD
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/fabric8-maven-sample-zero-config
      labels:
        app: fabric8-maven-sample-zero-config
        provider: fabric8
        version: 4.3.1
        group: io.fabric8
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: fabric8-maven-sample-zero-config:4.3.1
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: fabric8-maven-sample-zero-config:4.3.1
    type: ImageChange
