target/classes/META-INF/fabric8/openshift/fabric8-maven-sample-zero-config-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/fabric8-maven-sample-zero-config
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: fabric8-maven-sample-zero-config
    provider: fabric8
    version: 4.3.1
    group: io.fabric8
  name: fabric8-maven-sample-zero-config
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fabric8-maven-sample-zero-config
    provider: fabric8
    group: io.fabric8
