target/classes/META-INF/fabric8/openshift/fabric8-maven-sample-zero-config-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/fabric8-maven-sample-zero-config
    fabric8.io/scm-tag: HEAD
  labels:
    expose: "true"
    app: fabric8-maven-sample-zero-config
    provider: fabric8
    version: 4.3.1
    group: io.fabric8
  name: fabric8-maven-sample-zero-config
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fabric8-maven-sample-zero-config
